# motoros2_interfaces

./: .editorconfig  .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/workflows/: ci_reuse.yaml
.reuse/: dep5
msg/: AlarmCauseRemedy.msg  AlarmInfo.msg  ControlModeEnum.msg  ErrorInfo.msg  InformJobCrudResultCodes.msg  InitTrajEnum.msg  IoResultCodes.msg  MotionReadyEnum.msg  QueueResultEnum.msg  SelectionResultCodes.msg  VarResultCodes.msg
srv/: DeleteInformJob.srv  GetActiveAlarmInfo.srv  GetInformJob.srv  ListInformJobs.srv  PutInformJob.srv  QueueTrajPoint.srv  ReadGroupIO.srv  ReadMRegister.srv  ReadSingleIO.srv  ReadVarByte.srv  ReadVarDouble.srv  ReadVarInteger.srv  ReadVarPosition.srv  ReadVarReal.srv  ReadVarString.srv  ResetError.srv  SelectMotionTool.srv  StartPointQueueMode.srv  StartRtMode.srv  StartTrajMode.srv  WriteGroupIO.srv  WriteMRegister.srv  WriteSingleIO.srv  WriteVarByte.srv  WriteVarDouble.srv  WriteVarInteger.srv  WriteVarPosition.srv  WriteVarReal.srv  WriteVarString.srv
