<?xml version="1.0"?>
<!--
  SPDX-FileCopyrightText: 2022-2023, Yaskawa America, Inc.
  SPDX-FileCopyrightText: 2022-2023, Delft University of Technology

  SPDX-License-Identifier: Apache-2.0
-->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoros2_interfaces</name>
  <version>0.1.3</version>
  <description>Messages, services and actions for use with MotoROS2</description>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <maintainer email="ted.miller@motoman.com">Ted Miller (Yaskawa Motoman)</maintainer>

  <license file="LICENSES/Apache-2.0.txt">Apache-2.0</license>
  <license file="LICENSES/CC-BY-SA-4.0.txt">CC-BY-SA-4.0</license>
  <license file="LICENSES/CC0-1.0.txt">CC0-1.0</license>

  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
